Alignment of Contact form in ng-view container -  bug fix

--- a/frontend/public/assets/css/main.css
+++ b/frontend/public/assets/css/main.css
@@ -1,8 +1,11 @@
     html, body {
+        background-color: #f8f9fa;
         padding: 0;
         margin: 0;
         overflow: hidden;
         min-height: 100%;
+        height: 100%;
+        width: 100%;
         font-family: 'OpenSans-Regular';
     }
     //OpenSans bold
@@ -50,20 +53,26 @@
         font-feature-settings: 'liga';
     }
     .divNgView {
-        position: absolute;
-        top: 60px;
-        left: 425px;
-        bottom:0;
-        right:0;
+        margin-right: 0;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #f8f9fa;
     }
     .insideNgView {
-        width:100%;
+        width: 100%;
         width: 813px;
         height: 775.px;
         background-color: #FFF;
         border: 2px solid red;
-}
+    }
+    .main-container {
+        display: flex;
+        justify-content: flex-start;
+    }
+    .main-container .sub-container-2 {
+
+        padding-top: 35px;
+        padding-bottom: 153px;;
+        width: 100%;
+    }
